# proxyconf

./: .dockerignore  .gitignore  .vsts-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  install.cmd  main.rs
.github/workflows/: build.yml
src/: lib.rs  main.rs  registry.rs  serialization.rs  types.rs
src/proxyconf/: envvars.rs  hex.rs  lib.rs  registry.rs  registry_helpers.rs  serialization.rs  string_serialization.rs  types.rs
src/proxyconf/envvars_settings/: mod.rs
src/proxyconf/ie/: mod.rs  registry.rs  types.rs
src/proxyconf/ie/legacy/: mod.rs  registry.rs  types.rs
src/proxyconf/ie/modern/: mod.rs  registry.rs  serialization.rs  types.rs
src/proxyconf/internet_settings/legacy/: registry.rs
src/proxyconf/internet_settings/modern/: mod.rs  registry.rs  serialization.rs  types.rs
src/proxyconf/winhttp/: mod.rs  registry.rs  serialization.rs  types.rs
