[package]
name = "proxyconf"
version = "0.1.0"
authors = ["Julien Roncaglia <julien@roncaglia.fr>"]
license = "MIT"
keywords = ["windows", "docker", "proxy", "config", "cli"]
homepage = "https://github.com/vbfox/proxyconf"
repository = "https://github.com/vbfox/proxyconf"
description = """
Windows proxy configuration from the command line.
"""
readme = "README.md"

[dependencies]
winreg = "0.5"
byteorder = "1.2"
error-chain = "0.11"
clap = "2.30"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'

[lib]
name = "proxyconf"
path = "src/proxyconf/lib.rs"

[[bin]]
name = "proxyconf"
test = false
doc = false
