[package]
name = "proxyconf"
version = "0.1.2"
authors = ["Julien Roncaglia <julien@roncaglia.fr>"]
license = "MIT"
keywords = ["windows", "docker", "proxy", "config", "cli"]
categories = ["command-line-utilities", "os::windows-apis"]
homepage = "https://github.com/vbfox/proxyconf"
repository = "https://github.com/vbfox/proxyconf"
description = """
Windows proxy configuration from the command line.
"""
readme = "README.md"

[dependencies]
winreg = "0.5.1"
byteorder = "1.2.3"
error-chain = "0.12.0"
clap = "2.32.0"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'

[lib]
name = "proxyconf"
path = "src/proxyconf/lib.rs"

[[bin]]
name = "proxyconf"
test = false
doc = false
