[package]
name = "proxyconf"
version = "0.2.1"
authors = ["Julien Roncaglia <julien@roncaglia.fr>"]
license = "MIT"
keywords = ["windows", "docker", "proxy", "config", "cli"]
categories = ["command-line-utilities", "os::windows-apis"]
homepage = "https://github.com/vbfox/proxyconf"
repository = "https://github.com/vbfox/proxyconf"
description = """
Windows proxy configuration from the command line.
"""
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
byteorder = "1.3.1"
clap = "2.33.0"
failure = "0.1.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.6.0"

[dev-dependencies]
hex = "0.3.2"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1

[lib]
name = "proxyconf"
path = "src/proxyconf/lib.rs"

[[bin]]
name = "proxyconf"
test = false
doc = false
